unpackaged/main/default/objects/Project_Time_Sheet__c/Project_Time_Sheet__c.object-meta.xml
<CustomObject>
    <label>Project Time Sheet</label>
    <nameField>
        <displayFormat>PTS-{0000000}</displayFormat>
        <label>Project Time Sheet Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Time Sheets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>