unpackaged/main/default/objects/Project_Time_Sheet__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Project Time Sheets</relationshipLabel>
    <relationshipName>Project_Time_Sheets</relationshipName>
    <type>Lookup</type>
</CustomField>