unpackaged/main/default/objects/Project_Time_Sheet__c/fields/Project_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Display_Name__c</fullName>
    <label>Project Display Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>