unpackaged/main/default/objects/Project_Time_Sheet__c/fields/Project_Task__c.field-meta.xml
<CustomField>
    <fullName>Project_Task__c</fullName>
    <label>Project Task</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Billflex</fullName>
            </value>
            <value>
                <fullName>Integration</fullName>
            </value>
            <value>
                <fullName>FSL</fullName>
            </value>
            <value>
                <fullName>CIS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>