unpackaged/main/default/objects/Project_Time_Sheet__c/fields/SubTask__c.field-meta.xml
<CustomField>
    <fullName>SubTask__c</fullName>
    <label>SubTask</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Project_Task__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Billflex Overlap</fullName>
            </value>
            <value>
                <fullName>Time backdating</fullName>
            </value>
            <value>
                <fullName>FS Mobile</fullName>
            </value>
            <value>
                <fullName>LOC Support</fullName>
            </value>
            <value>
                <fullName>Reports</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>