unpackaged/main/default/objects/Project_Time_Sheet__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Assignee__c</columns>
    <columns>Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Hours__c</columns>
    <columns>Project_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>